# the-algorithm

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
data/: elo.csv  iso.csv  pull_elos.py
euro-2024-predict/: README.md  get_elo_lookup.ipynb  get_elos.py  lightgbm_model.txt  transform_brainstorm.ipynb
euro-2024-predict/etl/: shared.py
src/pab_algorithm/: __init__.py  config.py  data_types.py  main.py
src/pab_algorithm/app/: app.py
src/pab_algorithm/etl/: __init__.py  country_lookup_pipeline.py  load_data.py  shared.py  training_dataset_pipeline.py
src/pab_algorithm/model_store/: gbm_model.txt  linear_model.pkl
src/pab_algorithm/modelling/: train_lgb.py  train_linear.py
src/pab_algorithm/models/: predictor.py  team.py
src/pab_algorithm/predictor/: country_lookup.py  grids.py  model_store.py  predictor.py  team.py
